package edu.hitsz.basic;

/**
 * 观察者模式的订阅者接口
 * @auther 柯嘉铭
 */
public interface CanBoom {
    /**
     * 订阅者爆炸
     */
    void boom();
}
